--- a/HTML/Practice/practice1/practice.html
+++ b/HTML/Practice/practice1/practice.html
@@ -67,6 +67,16 @@ just use css tho-->
     <br> heightened<sup>sup</sup> <br>
 </p>
 
-
+<!--blockquotes-->
+<p>Blockquotes are used for citing.</p>
+<blockquote>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra quam id libero auctor,
+    ac iaculis enim volutpat. Pellentesque eu viverra nisi, et congue erat. Sed vitae pellentesque metus,
+    quis efficitur ligula. Nullam congue id sapien vitae tempor. Quisque in commodo lorem.
+    Aliquam laoreet dolor vitae vestibulum auctor. Proin eget felis nulla.
+    Nam interdum neque in sollicitudin lobortis. Fusce placerat dictum enim vulputate euismod.
+    Nam tempor nunc volutpat leo lobortis mattis. Maecenas semper velit at arcu maximus blandit.
+    Fusce elementum lorem sit amet metus posuere, a hendrerit elit elementum.
+</blockquote>
 </body>
 </html>
