--- a/HTML/Practice/practice1/practice.html
+++ b/HTML/Practice/practice1/practice.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
 <head>
 <title>Page Title</title>
+<link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
+<link rel="stylesheet" href="style.css>"
 </head>
 <body>
 
@@ -69,7 +71,7 @@ just use css tho-->
 
 <!--blockquotes-->
 <p>Blockquotes are used for citing.</p>
-<blockquote>
+<blockquote cite="https://www.example.org">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra quam id libero auctor,
     ac iaculis enim volutpat. Pellentesque eu viverra nisi, et congue erat. Sed vitae pellentesque metus,
     quis efficitur ligula. Nullam congue id sapien vitae tempor. Quisque in commodo lorem.
@@ -78,5 +80,28 @@ just use css tho-->
     Nam tempor nunc volutpat leo lobortis mattis. Maecenas semper velit at arcu maximus blandit.
     Fusce elementum lorem sit amet metus posuere, a hendrerit elit elementum.
 </blockquote>
+
+<!--quotes (inline)-->
+<p>
+    Inline quotes use the q tag. For example, W3S has a line in their HTML help that says:
+    <q>WWF's goal is to: Build a future where people live in harmony with nature.</q> Inline quotes
+    tend to have quotes around them.
+</p>
+
+<!--abbreviations-->
+<p>When something needs to be shortened, you can always use <abbr title="abbreviations">abbreves.</abbr>.</p>
+
+<!--address-->
+<p>To give info to go places, use the address tag.</p>
+<address>
+    Written by John Doe.<br>
+    Visit us at:<br>
+    Example.com<br>
+    Box 564, Disneyland<br>
+    USA
+</address>
+
+<!--quick break, supported color names-->
+<a href="https://www.w3schools.com/colors/colors_hex.asp">Automatically supported color names btw</a>
 </body>
 </html>
