--- a/HTML/Projects/Checkers/index.html
+++ b/HTML/Projects/Checkers/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-<title>Page Title</title>
+    <title>Checkers Game</title>
+    <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+<h1>Checkers</h1>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<p>game goes here, working on it</p>
+<br>
 
+<p>if there's anything you want to do here, check out the <a href="settings.html">settings</a><br>there's nothing there though</p>
+<p><a href="https://freedns.afraid.org">freedns can help you host a site too, click here</a></p>
 </body>
 </html>
