--- a/HTML/Practice/practice1/practice.html
+++ b/HTML/Practice/practice1/practice.html
@@ -3,7 +3,7 @@
 <head>
 <title>Page Title</title>
 <link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
-<link rel="stylesheet" href="style.css>"
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
