--- a/HTML/Projects/Portfolio/index.html
+++ b/HTML/Projects/Portfolio/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
     <script src="scripts/nutshell.js"></script>
     <script>Nutshell.setOptions({startOnLoad: true, lang: 'en', dontEmbedHeadings: true});</script>
@@ -16,6 +17,8 @@
 <a href="#upcoming">:Upcoming Plans</a>
 <br>
 <a href="#howto">:How does this page code work?</a>
+<br>
+<a href="about">:About Me</a>
 
 <h6 id="achievements">:x Achievements</h6>
 <ul>
@@ -33,15 +36,14 @@
 
 <h6 id="howto">:x Howto</h6>
 <p><b>"How did you manage to make these interesting unwrapping links?"</b></p>
-<p>I didn't, of course. <a href="https://en.wikipedia.org/wiki/Ninety%E2%80%93ninety_rule#">:The ninety-ninety rule</a> states,</p>
+<p>I didn't, of course. The neat links are called <a href="https://ncase.me/nutshell/">nutshells,</a> which I'm currently "borrowing indefinitely." Note however that cross-site Nutshell sections rely on the fact that the other site has <a href="https://ncase.me/nutshell/#CORS">:CORS</a> enabled or Nutshell installed.</p>
+</body>
+<!--<a href="https://en.wikipedia.org/wiki/Ninety%E2%80%93ninety_rule#">:The ninety-ninety rule</a> states,</p>
 <blockquote>
     The first 90 percent of the code accounts for the first 90 percent of the development time.
     The remaining 10 percent of the code accounts for the other 90 percent of the development time.
     -Tom Cargill, Bell Labs
 </blockquote>
 <p>Of course, 50% of development is on <a href="https://en.wikipedia.org/wiki/Stack_Overflow#">:Stack Overflow,</a> 60% stealing code, (from stack overflow or elsewhere,) 30% on <a href="https://en.wikipedia.org/wiki/GitHub#">:GitHub,</a> 40% staring at your IDE, and -20% getting your code to work first try.</p>
-<small>quote me on this</small>
-<br>
-<p>The neat links are called <a href="https://ncase.me/nutshell/">:nutshells,</a> which I'm currently "borrowing indefinitely." Note however that cross-site Nutshell sections rely on the fact that the other site has <a href="https://ncase.me/nutshell/#CORS">:CORS</a> enabled or Nutshell installed.</p>
-</body>
+<br>-->
 </html>
