random push and commit
Signed-off-by: best <thatboii@altmails.com>

--- a/HTML/Projects/Weather/index.html
+++ b/HTML/Projects/Weather/index.html
@@ -5,7 +5,7 @@
     <title>Weather App</title>
     <link rel="icon" type="image/x-icon" href="imgs/favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
     <br>
     <input id="loc-input" type="text">
     <br>
-    <button id="submit" type="button">Get Weather</button>
+    <button id="loc-submit" type="submit">Get Weather</button>
 </div>
 
-<div class="data">
+<div class="info">
     <p id="loc-name"></p>
     <p id="loc-region"></p>
     <p id="loc-country"></p>
