--- a/HTML/Projects/Weather/index.html
+++ b/HTML/Projects/Weather/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="info">
-    <p id="loc-name"></p>
+    <p id="loc-name"/p>
     <p id="loc-region"></p>
     <p id="loc-country"></p>
     <p id="condition"></p>
